Fix firefox scrollbar

--- a/app/assets/stylesheets/edge.scss
+++ b/app/assets/stylesheets/edge.scss
@@ -110,5 +110,9 @@
   .create-server-form-bottom button {
     align-items: center;
   }
+
+  .search-results ul {
+    width: 435px;
+  }
 }
 
