--- a/app/assets/stylesheets/firefox.scss
+++ b/app/assets/stylesheets/firefox.scss
@@ -53,5 +53,9 @@
   .create-server-form-bottom button {
     align-items: center;
   }
+
+  .search-results ul {
+    width: 435px;
+  }
 }
 
